--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@font-face {
+  font-family: 'exotc';
+  src: url("./fonts/EXO350DB.ttf") format('truetype');
+}
+
+@font-face {
+  font-family: 'akkuratPro';
+  src: url("./fonts/AkkuratPro-Regular.otf") format('opentype');
+}
+
+@font-face {
+  font-family: 'anton';
+  src: url("./fonts/Anton.ttf") format('truetype');
+}
+
+@media (max-width: 1024px) {
+  .sm-items-center {
+    align-items: center;
+  }
+}
+
 .App {
   text-align: center;
 }
