--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,13 @@
 .ptext {
-  /* background: linear-gradient(165deg, #df8d35, #df8d35, #df8d35, #E8A550, #df8d35); */
-  /* background: linear-gradient(65deg, rgba(132, 93, 13, 1) 0%, rgba(132, 93, 13, 1) 20%,  rgba(162, 168, 68, 1) 30%, rgba(162, 168, 68, 1) 56%); */
   background: linear-gradient(180deg, #D87E25 0%, #F5C372 100%);
-  font: 900 1.2em sans-serif;
+  font: 900 1.2em;
   background-clip: text;
   -webkit-background-clip: text;
   color: rgba(0, 0, 0, 0.2);
 }
 .ptext2 {
   background: linear-gradient(180deg, #D87E25 0%, #F5C372 100%);
-  font: 900 1.2em sans-serif;
+  font: 900 1.2em;
   background-clip: text;
   -webkit-background-clip: text;
   color: rgba(0, 0, 0, 0.2);
